<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_page_score_text"
        android:textColor="@color/quiz_page_score_text"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:text="@string/quiz_page_question_count_text"
        android:textColor="@color/quiz_page_text"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:text="@string/quiz_page_category_text"
        android:textColor="@color/quiz_page_text"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_category"
        android:text="@string/quiz_page_difficulty_text"
        android:textColor="@color/quiz_page_text"
        android:layout_marginBottom="16dp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/quiz_page_countdown_text"
        android:textColor="@color/quiz_page_text"
        android:textSize="40sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:text="@string/quiz_page_question_text"
        android:textAlignment="center"
        android:textColor="@color/quiz_page_text"
        android:textSize="20sp"
        android:freezesText="true"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_page_option_one_text"
            android:textColor="@color/quiz_page_text"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_page_option_two_text"
            android:textColor="@color/quiz_page_text"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_page_option_three_text"
            android:textColor="@color/quiz_page_text"
            android:freezesText="true"/>

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_page_option_four_text"
            android:textColor="@color/quiz_page_text"
            android:freezesText="true"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_view_answer_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:text="@string/quiz_page_answer_description_text"
        android:textColor="@color/quiz_page_text"
        android:freezesText="true"/>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_answer_description"
        android:layout_marginTop="16dp"
        android:text="@string/quiz_page_confirm_next_text"
        android:freezesText="true"/>


</RelativeLayout>