<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".StartingScreenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/home_page_title"
        android:textColor="@color/home_page_text"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_start_quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/home_page_high_score_text"
        android:textColor="@color/home_page_high_score_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/home_page_button_text"
        />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@id/button_start_quiz"
        android:textColor="@color/home_page_high_score_text"
        android:layout_below="@id/button_start_quiz" />

    <Spinner
        android:id="@+id/spinner_level"
        android:layout_width="wrap_content"
        android:entries="@array/levels"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/button_start_quiz"
        android:layout_below="@id/spinner_category"
        android:textColor="@color/home_page_high_score_text"
        android:layout_marginTop="16dp"/>


</RelativeLayout>